--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -2,7 +2,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -58,7 +59,7 @@
                 android:textAlignment="viewStart"
                 android:fontFamily="@font/avenir_light"/>
 
-            <com.mukesh.OtpView
+          <!--  <com.mukesh.OtpView
                 android:id="@+id/otpView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,7 +78,20 @@
                 app:itemSpacing="@dimen/dimen_20"
                 android:layout_marginTop="@dimen/dimen_20"
                 android:focusable="true"
-                android:focusableInTouchMode="true"/>
+                android:focusableInTouchMode="true"/>-->
+
+            <in.aabhasjindal.otptextview.OtpTextView
+                android:id="@+id/otp_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                app:height="40dp"
+                app:width="@dimen/dimen_60"
+                app:bar_enabled="true"
+                app:bar_height="1dp"
+                app:length="4"
+                app:bar_active_color="@color/colorSuccess"
+                app:otp_text_size="@dimen/font_16sp"/>
 
 
             <TextView
