--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -138,7 +138,8 @@
                 android:visibility="gone" />
 
 
-            <TextView
+            <Button
+                android:id="@+id/btnNext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_35"
@@ -157,7 +158,7 @@
                 android:textSize="14sp"
                 android:textAllCaps="false">
 
-            </TextView>
+            </Button>
 
 
 
