--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,13 +7,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dimen_10">
 
         <ImageView
             android:id="@+id/btnBack"
             android:layout_width="@dimen/dimen_40"
             android:layout_height="@dimen/dimen_40"
             android:padding="@dimen/dimen_10"
+            android:onClick="onBackBtnClick"
             android:src="@drawable/ic_back"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"/>
