--- a/app/src/main/res/layout/dialog_progress.xml
+++ b/app/src/main/res/layout/dialog_progress.xml
@@ -15,12 +15,13 @@
         android:orientation="vertical"
         android:padding="5dp">
 
-      <!--  <ImageView
+        <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/ivLoader"
-            android:src="@drawable/eyenak_loader"/>
--->
+            android:id="@+id/iv_loader"
+            android:src="@drawable/loader_hr"/>
+
+
     </RelativeLayout>
 
 </RelativeLayout>
